--- a/package.json
+++ b/package.json
@@ -39,6 +39,9 @@
     ]
   },
   "devDependencies": {
-    "babel-plugin-styled-components": "^2.1.4"
+    "autoprefixer": "^10.4.16",
+    "babel-plugin-styled-components": "^2.1.4",
+    "postcss": "^8.4.33",
+    "tailwindcss": "^3.4.1"
   }
 }
